# mt_logger

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: workflow.yml
src/: lib.rs  log_receiver.rs  log_sender.rs  receiver.rs  sender.rs
