[package]
name = "mt_logger"
version = "1.0.0"
authors = ["CJ McAllister <cjm571@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "^0.4"
once_cell = "^1.7"

[dev-dependencies]
lazy_static = "^1.4"
regex = "^1.4"